# ragdoc

./: .env.example  .gitignore  AGENTS.md  README.md  TICKET_AGENT.md  langgraph.json  pyproject.toml
apps/chat/: graph.py
configs/: prompts.yaml  sources.yaml  tutorial_template.md
src/ragdoc/: __init__.py
src/ragdoc/agent/: graph.py  prompts.py
src/ragdoc/fetch/: __init__.py  cli.py  git_fetcher.py  http_fetcher.py  indexer.py  models.py  state.py  text_extraction.py  utils.py
src/ragdoc/retrieval/: models.py  retriever.py
src/ragdoc/test/: cli.py
src/ragdoc/ticket_agent/: __init__.py  cli.py  freshdesk_client.py  models.py  processor.py
test/: test_bm25_implementation.py  test_bm25_integration.py  test_complete_title_extraction.py  test_context_debug.py  test_context_fix.py  test_continuous_conversation.py  test_enhanced_features.py  test_final_integration.py  test_hybrid_search.py  test_integration_refinement.py  test_iterative_refinement.py  test_prompt_config.py  test_real_conversation.py  test_recursive_fetcher.py  test_retriever.py  test_state_debug.py  test_title_extraction.py  test_token_limit.py  test_translation.py
